--- a/CinemaWebSystem/Views/Clientes/Delete.cshtml
+++ b/CinemaWebSystem/Views/Clientes/Delete.cshtml
@@ -47,6 +47,12 @@
         <dd>
             @Html.DisplayFor(model => model.Estudante)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Ativa)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Ativa)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
