--- a/CinemaWebSystem/Views/Clientes/Edit.cshtml
+++ b/CinemaWebSystem/Views/Clientes/Edit.cshtml
@@ -29,18 +29,8 @@
                 <span asp-validation-for="DataNascimento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Senha" class="control-label"></label>
-                <input asp-for="Senha" class="form-control" />
-                <span asp-validation-for="Senha" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SenhaCofirmada" class="control-label"></label>
-                <input asp-for="SenhaCofirmada" class="form-control" />
-                <span asp-validation-for="SenhaCofirmada" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Estudante" class="control-label"></label>
-                <select asp-for="Estudante" class="form-control"></select>
+                <select asp-for="Estudante" asp-items="@new SelectList(Enum.GetValues(typeof(Estudante)))" class="form-control"></select>
                 <span asp-validation-for="Estudante" class="text-danger"></span>
             </div>
             <div class="form-group">
