--- a/CinemaWebSystem/Views/Filmes/Delete.cshtml
+++ b/CinemaWebSystem/Views/Filmes/Delete.cshtml
@@ -30,6 +30,12 @@
             @Html.DisplayFor(model => model.Classificacao)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Ativa)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Ativa)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Genero)
         </dt>
         <dd>
