--- a/CinemaWebSystem/Views/Sessoes/Delete.cshtml
+++ b/CinemaWebSystem/Views/Sessoes/Delete.cshtml
@@ -30,6 +30,12 @@
             @Html.DisplayFor(model => model.Ativa)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Cinema)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Cinema.Cidade)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Filme)
         </dt>
         <dd>
