--- a/CinemaWebSystem/Views/Cinemas/Delete.cshtml
+++ b/CinemaWebSystem/Views/Cinemas/Delete.cshtml
@@ -30,10 +30,28 @@
             @Html.DisplayFor(model => model.Cidade)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Localizacao)
+            @Html.DisplayNameFor(model => model.Bairro)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Localizacao)
+            @Html.DisplayFor(model => model.Bairro)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Rua)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Rua)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Numero)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Numero)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Ativa)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Ativa)
         </dd>
     </dl>
     
