--- a/CinemaWebSystem/Views/Cinemas/Index.cshtml
+++ b/CinemaWebSystem/Views/Cinemas/Index.cshtml
@@ -22,7 +22,13 @@
                     @Html.DisplayNameFor(model => model.Cidade)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Localizacao)
+                    @Html.DisplayNameFor(model => model.Bairro)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Rua)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Numero)
                 </th>
             <th></th>
         </tr>
@@ -40,11 +46,16 @@
                 @Html.DisplayFor(modelItem => item.Cidade)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Localizacao)
+                @Html.DisplayFor(modelItem => item.Bairro)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rua)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Numero)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CinemaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CinemaId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.CinemaId">Delete</a>
             </td>
         </tr>
