--- a/CinemaWebSystem/Views/Filmes/Index.cshtml
+++ b/CinemaWebSystem/Views/Filmes/Index.cshtml
@@ -1,53 +1,42 @@
 ﻿@model IEnumerable<CinemaWebSystem.Models.Filme>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Filmes";
 }
 
-<h2>Index</h2>
+<h2>Filmes</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Titulo)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Imagem)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Classificacao)
-                </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genero)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Titulo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Imagem)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Classificacao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genero.Descricao)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.FilmeId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.FilmeId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.FilmeId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="row">
+    @foreach (var item in Model)
+    {
+    <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2" style="height:400px;">
+        <div>
+            @{
+                if (item.Imagem != null)
+                {
+                    var base64 = Convert.ToBase64String(item.Imagem);
+                    var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
+                    <img src="@imgsrc" class="img-thumbnail img-fluid" style="max-width:175px" />
+                }
+            }
+        </div>
+        <h4>
+            @Html.DisplayFor(modelItem => item.Titulo)
+        </h4>
+        <h5>
+            @Html.DisplayFor(modelItem => item.Genero.Descricao)
+        </h5>
+        @{
+            var imgsrcClass = Classificacao.ClassificacaoImagens()[item.Classificacao];
+            <img src="@imgsrcClass" style="max-width: 30px; padding-bottom: 10px" />
+        }
+        <div>
+            <a asp-action="Edit" asp-route-id="@item.FilmeId">Edit</a> |
+            <a asp-action="Delete" asp-route-id="@item.FilmeId">Delete</a>
+        </div>
+    </div>
+    }
+</div>
