--- a/CinemaWebSystem/Views/Sessoes/Edit.cshtml
+++ b/CinemaWebSystem/Views/Sessoes/Edit.cshtml
@@ -24,11 +24,6 @@
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Ativa" class="control-label"></label>
-                <select asp-for="Ativa" class="form-control"></select>
-                <span asp-validation-for="Ativa" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="FilmeId" class="control-label"></label>
                 <select asp-for="FilmeId" class="form-control" asp-items="ViewBag.FilmeId"></select>
                 <span asp-validation-for="FilmeId" class="text-danger"></span>
@@ -37,6 +32,11 @@
                 <label asp-for="SalaId" class="control-label"></label>
                 <select asp-for="SalaId" class="form-control" asp-items="ViewBag.SalaId"></select>
                 <span asp-validation-for="SalaId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CinemaId" class="control-label"></label>
+                <select asp-for="CinemaId" class="form-control" asp-items="ViewBag.CinemaId"></select>
+                <span asp-validation-for="CinemaId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
